<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_standard">

        <TextView
            android:id="@+id/tvYay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petit_cochon"
            android:text="@string/yay"
            android:textAlignment="center"
            android:textColor="@color/brown_text"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/dialogFinishTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialogFinishTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petit_cochon"
            android:text="@string/success"
            android:textAlignment="center"
            android:textColor="@color/brown_text"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/btnDialogFinish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvYay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petit_cochon"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogFinishTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>