<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_standard">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petit_cochon"
            android:text="@string/correct"
            android:textAlignment="center"
            android:textColor="@color/brown_text"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/imgFruitDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgFruitDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fruit"
            app:layout_constraintBottom_toTopOf="@+id/tvThis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

        <TextView
            android:id="@+id/tvThis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petit_cochon"
            android:textAlignment="center"
            android:textColor="@color/brown_text"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/btnDialogNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgFruitDialog" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petit_cochon"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvThis" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
