<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard"
    android:background="@drawable/background_game"
    tools:context=".ui.result.CameraResultActivity">

    <ImageView
        android:id="@+id/imgFruitCameraResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/tvFruit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/picture_result" />

    <TextView
        android:id="@+id/tvFruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/petit_cochon"
        android:textAlignment="center"
        android:textColor="@color/brown_text"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnResultBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFruitCameraResult" />

    <Button
        android:id="@+id/btnResultBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="18sp"
        android:fontFamily="@font/petit_cochon"
        android:backgroundTint="@color/orange_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnToDetail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFruit" />

    <Button
        android:id="@+id/btnToDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/green_primary"
        android:fontFamily="@font/petit_cochon"
        android:text="@string/see_nutrition"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnResultBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnResultBack"
        app:layout_constraintTop_toTopOf="@+id/btnResultBack" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>