<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.FruitDetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionBarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/detailContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvList"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/petit_cochon"
            android:text="@string/fruit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/detailContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBarDetail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDetailFruit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/fruit"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/tvNutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/petit_cochon"
                android:text="@string/nutrition"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvNutritionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_pen_script"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tvBenefit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/petit_cochon"
                android:text="@string/benefit"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginStart="15dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBenefit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false" />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>