<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_standard"
    tools:context=".ui.home.HomeFragment">

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cvCameraCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cvCameraCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_standard"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintBottom_toTopOf="@+id/tvLainnya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTitle" />

    <TextView
        android:id="@+id/tvLainnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/petit_cochon"
        android:text="@string/others"
        android:textAlignment="textStart"
        android:textColor="@color/brown_text"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintBottom_toTopOf="@+id/cvListCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCameraCard" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cvListCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintVertical_weight="1.3"
        app:layout_constraintBottom_toTopOf="@+id/tvList"
        app:layout_constraintEnd_toStartOf="@+id/spacer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLainnya" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="@dimen/margin_standard"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/cvListCard"
        app:layout_constraintEnd_toStartOf="@id/cvGameCard"
        app:layout_constraintStart_toEndOf="@id/cvListCard"/>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cvGameCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cvListCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spacer"
        app:layout_constraintTop_toTopOf="@+id/cvListCard" />

    <TextView
        android:id="@+id/tvList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/petit_cochon"
        android:text="@string/list_fruit"
        android:textAlignment="textStart"
        android:textColor="@color/brown_text"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cvListCard"
        app:layout_constraintStart_toStartOf="@+id/cvListCard"
        app:layout_constraintTop_toBottomOf="@+id/cvListCard" />

    <TextView
        android:id="@+id/tvGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/petit_cochon"
        android:text="@string/game"
        android:textAlignment="textStart"
        android:textColor="@color/brown_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvList"
        app:layout_constraintEnd_toEndOf="@+id/cvGameCard"
        app:layout_constraintStart_toEndOf="@+id/cvListCard"
        app:layout_constraintTop_toTopOf="@+id/tvList" />

</androidx.constraintlayout.widget.ConstraintLayout>
